# seetaface6ToPy

./: .gitignore  README.md  run_demo.sh  seeta_test.py
seetaface/: .gitignore  CMakeLists.txt  SeetaFaceAPI.cpp  face_struct.py  faceapi.py
seetaface/include/seeta/: QualityStructure.h
seetaface/lib_mac/: libSeetaAgePredictor600.dylib  libSeetaAuthorize.dylib  libSeetaEyeStateDetector200.dylib  libSeetaFaceAPI.dylib  libSeetaFaceAntiSpoofingX600.dylib  libSeetaFaceDetector600.dylib  libSeetaFaceLandmarker600.dylib  libSeetaFaceRecognizer610.dylib  libSeetaFaceTracking600.dylib  libSeetaGenderPredictor600.dylib  libSeetaMaskDetector200.dylib  libSeetaPoseEstimation600.dylib  libSeetaQualityAssessor300.dylib
